postgresql-common (226) UNRELEASED; urgency=medium

  * PgCommon.pm: documentation converted to POD, many thanks to Pablo Valdés
    for the excellent patch!

 -- Christoph Berg <myon@debian.org>  Wed, 10 Feb 2021 23:51:11 +0100

postgresql-common (225) unstable; urgency=medium

  * pg_lsclusters, cluster_info: Show cluster managed by pacemaker or patroni.
  * pg_ctlcluster: Fix "use systemctl instead" context.
  * pg_createcluster: In 14+, use initdb --no-instructions.
  * pg_upgradecluster: Deprecate password_encryption as boolean in 14.
  * t: Accept changed connection error messages from libpq 14.

 -- Christoph Berg <myon@debian.org>  Tue, 02 Feb 2021 15:40:25 +0100

postgresql-common (224) unstable; urgency=medium

  * pg_wrapper, PgCommon: When looking for the newest version, consider the
    name of the binary (psql, postgres) asked for.
  * pg_buildext: Fix typo in the psql/virtualenv exit code handling.
  * pg_ctlcluster: Fix starting of md5-only clusters on 8.2/8.3.
  * t/025_logging.t: Sleep a bit for the log tests to make test more stable.
  * postgresqlrc.5, user_clusters.5: Mention file locations more prominently.
  * pg_upgradecluster: Deprecate operator_precedence_warning in PG14.

 -- Christoph Berg <myon@debian.org>  Thu, 14 Jan 2021 16:23:51 +0100

postgresql-common (223) unstable; urgency=medium

  * pg_ctlcluster: Refuse to start root-owned clusters with a sensible error
    message.
  * pgdg/apt.postgresql.org.sh: Add groovy, remove archived distributions.

 -- Christoph Berg <myon@debian.org>  Thu, 12 Nov 2020 12:37:57 +0100

postgresql-common (222) unstable; urgency=medium

  [ Michael Banck ]
  * pg_upgradecluster: set max_wal_senders along with wal_level in ugprade
    mode.

  [ Christoph Berg ]
  * Drop t/003_package_checks.t, psql can be linked with readline now.
    http://meetbot.debian.net/debian-ftp/2020/debian-ftp.2020-03-13-20.02.html
  * Remove PostgreSQL 13 transition Breaks, problems were testsuite-only.
